--- a/style.css
+++ b/style.css
@@ -149,10 +149,21 @@ a {
     background-color: #000;
 }
 
-.open-content-active {
-    background-color: #B9FF66;
+.block .text::after {
+    width: 0% !important;
 }
 
+.open-content-active {
+    transition: all .5s ease-in-out;
+    background-color: #B9FF66 !important;
+
+}
+.open-content-active #slide-elem {
+    margin-top: 30px;
+    padding-top: 30px;
+    border-top: 1px solid #191A23 !important;
+    transition: border-top .3s ease-in-out;
+}
 * {
     margin: 0;
     padding: 0;
@@ -602,6 +613,7 @@ main .services ul li .left-side .more p::selection {
     padding: 41px 60px;
 
     border-radius: 45px;
+    transition: ease-in-out .5s;
     background-color: #F3F3F3;
     border: .5px solid #191A23;
     box-shadow: 0 5px 0 0 #191A23;
@@ -611,6 +623,8 @@ main .services ul li .left-side .more p::selection {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    margin-bottom: 0px;
 
 }
 
@@ -655,3 +669,9 @@ main .services ul li .left-side .more p::selection {
     background-color: #191A23;
 }
 
+#slide-elem {
+    margin-top: 30px;
+    padding-top: 30px;
+    border-top: 1px solid #F3F3F3;
+    transition: border-top .5s ease-in-out;
+}
